--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.16.3",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
+    "bcrypt": "^5.1.0",
     "next": "13.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
