--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "next": "13.4.0",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
