--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/react-dom": "18.2.3",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "prisma": "^4.14.0"
   }
 }
