updated a bunch of packages

--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.16.2",
-    "@types/bcrypt": "^5.0.0",
+    "@prisma/client": "^5.5.2",
+    "@types/bcrypt": "^5.0.1",
     "@types/node": "18.16.3",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "eslint-config-next": "^14.0.1",
     "jsonwebtoken": "^9.0.2",
-    "next": "13.4.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swr": "^2.2.2",
+    "next": "^14.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "^2.2.4",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.3",
-    "prisma": "^4.16.2"
+    "@types/jsonwebtoken": "^9.0.4",
+    "prisma": "^5.5.2"
   }
 }
