--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.33.2",
     "swr": "^2.2.4",
     "typescript": "5.0.4"
   },
